--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,9 +1,39 @@
+@media(max-width:768px){
+    body{
+        width: 90rem;
+    }
+    header{
+        position: fixed;
+    }
+    header h2{
+        margin-left: -62rem;
+    }
+    .contenedorRedesSociales{
+        left: 12rem;
+    }
+    .soy{
+        margin-left: 2rem;
+    }
+    .imgHero{
+        position: relative;
+        margin-left: 3rem;
+        top: 0;
+    }
+    .navHeader{
+        display: none
+    }
+    .botonContratame{
+        display: none
+    }
+
+}
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;1000&display=swap');
 *{
     margin: 0;
     padding: 0;
     font-family: 'Mulish', sans-serif;
 }
+
 /*limpiar efectos que vienen por defecto*/
 
 a{
@@ -41,7 +71,6 @@ footer{
    
     
 }
-
 
 
 .figuras .lineaondulada{
