cambios en el herooo

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -25,6 +25,7 @@
     .hamburguesa{
         position: relative;
         display: block;
+        width: 1rem;
         left: -54rem;
     }
     .navHeader{
