--- a/css/estilo.css
+++ b/css/estilo.css
@@ -26,7 +26,7 @@
         position: relative;
         display: block;
         width: 15rem;
-        left: -54rem;
+        margin-left:12rem;
     }
     .navHeader{
         display: none
