--- a/css/estilo.css
+++ b/css/estilo.css
@@ -147,9 +147,10 @@ footer{
 
 .imgHero{
     position: relative;
-    left: 6rem;
+    left: 8rem;
     margin-top: 7rem;
-    width: 35rem;
+    width: 30rem;
+    height: 41rem;
     transition: 3s;
 
    
@@ -246,11 +247,13 @@ footer{
     display: flex;
     flex-direction: column;
     margin-top: 4rem;
+    margin-left: 5rem;
     
 }
 .contenedorRedesSociales a{
     transform: scale(1);
     margin-top: 1rem;
+    
     font-size: 0.8rem;
 }
 .contenedorRedesSociales a:hover{
@@ -291,7 +294,7 @@ footer{
     text-align: center;
 }
 .soy{
-    margin-right: 10rem;
+    margin-right: 8rem;
     margin-top: -3rem;
     justify-content: center;
     text-align: center;
