--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,16 @@
+@media screen and (min-width:768px) and (max-width:1023px){
+    body{
+        width: 85rem;
+    }
+    .imgHero{
+        position: relative;
+        margin-left: 1rem;
+        top: -4rem;
+    }
+} 
+    
+
+
 @media (max-width:768px){
     body{
         width: 90rem;
